--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "geomblank",
   "version": "0.1.0",
-  "description": "Geomblank",
+  "description": "bentley-ottman-sweepline",
   "repository": "https://github.com/ggolikov/Geomblank",
   "main": "index.js",
   "author": "Grigory Golikov gr.golikov@gmail.com",
@@ -13,6 +13,7 @@
     "compress": "uglifyjs ./dist/geometry-src.js -o ./dist/geometry.js -m --comments",
     "server": "live-server --port=3001 --host=localhost --open=demo --watch=demo",
     "start": "npm-run-all --parallel watch server",
+    "test": "mocha ./tests/intersection.test.js",
     "deploy": "gh-pages -d demo"
   },
   "browserify": {
@@ -23,9 +24,11 @@
   "devDependencies": {
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
+    "chai": "^4.1.1",
     "eslint": "^3.14.1",
     "gh-pages": "^1.0.0",
     "live-server": "^1.2.0",
+    "mocha": "^3.5.0",
     "npm-run-all": "^4.0.1",
     "uglifyjs": "^2.4.10",
     "watchify": "^3.7.0"
