--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "compress": "uglifyjs ./dist/geometry-src.js -o ./dist/geometry.js -m --comments",
     "server": "live-server --port=3001 --host=localhost --open=demo --watch=demo",
     "start": "npm-run-all --parallel watch server",
-    "test": "mocha ./tests/intersection.test.js",
+    "test": "mocha ./tests/comparison.test.js",
     "deploy": "gh-pages -d demo"
   },
   "browserify": {
