--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "deploy": "gh-pages -d demo"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "babelify": "^10.0.0",
     "browserify": "^13.1.1",
     "chai": "^4.1.1",
     "eslint": "^3.14.1",
